[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/particles/strike_particle.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/EnemyTeleportAnchor.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/healing_particle.png" type="Texture" id=3]
[ext_resource path="res://scenes/particles/HealingParticle.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20, 16.4286 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14.3214, 13.9286 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 20, 25, 1 )
flag_disable_z = true
gravity = Vector3( 0, -80, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="EnemyTeleportAnchor" type="KinematicBody2D"]
scale = Vector2( 1.4, 1.4 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.19209e-06, -1.70299e-07 )
shape = SubResource( 7 )

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0357128, 0.357144 )
shape = SubResource( 6 )

[node name="StopMovingTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -0.714287, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="TeleportParticles" parent="." instance=ExtResource( 4 )]
self_modulate = Color( 0.12549, 0.905882, 1, 1 )
amount = 4
one_shot = false
randomness = 0.25
process_material = SubResource( 8 )
texture = ExtResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
[connection signal="timeout" from="StopMovingTimer" to="." method="_on_StopMovingTimer_timeout"]
